2010-01-18  Dominique Dumont  <dominique.dumont@hp.com> v1.209

	* lib/Config/Model/models/Sshd.pl: Added automatic migration of
	data from deprecated KeepAlive parameter to TCPKeepAlive
	parameter. This enables an automatic migration from old sshd
	config to new syntax.

	* lib/Config/Model/models/Ssh/HostElement.pl: Since ssh_config doc
	mentions that LocalForward and RemoteForward can be specified
	several times, these 2 parameters are changed from leaf to a list
	of leaf.

	* lib/Config/Model/models/Ssh.pl: As specifying Host block as list
	of patterns and content was not practical, the Host element in Ssh
	model was changed from list of HostBlock nodes to hash of
	HostElement. The Host patterns is used as the key of the
	hash. This enables a better view of shh configuration in the GUI.

	* lib/Config/Model/OpenSsh.pm (assign): Store value in uniline
	leaf even with embedded white spaces.
	(write_all_host_block): adapted to Host structure change in model

2009-09-10  Dominique Dumont  <dominique.dumont@hp.com> v1.208

	* lib/Config/Model/models/**.pl: Changed 'level' of some elements
	to 'important' so the new wizard provided by C::M::TkUI will show
	the most imporant ssh and sshd configuration parameters.

2009-07-29  Dominique Dumont  <dominique.dumont@hp.com> v1.207

	* t/ssh_config.t: When run as root, skip the tests that must be
	run as regular user. (Fix Debian FTBS)

	* lib/Config/Model/models/Ssh/HostElement.pl: Fix model error:
	ServerAliveInterval is an integer, not a boolean

2009-06-24  Dominique Dumont  <domi.dumont@free.fr> v1.206

	* Build.PL: added forgotten dependency on
	Parse::RecDescent. Depends on Config::Model 0.637

2009-06-23  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/**.pl: replaced deprecated 'built_in'
	model parameter with 'upstream_default'. (In fact I just had to
	run "config-model-edit -model Ssh -save" (from
	Config::Model::Itself))

2009-04-11  Dominique Dumont  <domi.dumont@free.fr> v1.205
